--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -41,6 +41,7 @@ body {
 .sidebar .nav-link {
     font-weight: 500;
     color: #333;
+    width: 200px;
 }
 
 .sidebar .nav-link .feather {
@@ -54,7 +55,7 @@ body {
 
 .sidebar .nav-link:hover .feather,
 .sidebar .nav-link.active .feather {
-    color: inherit;
+    color: #2470dc;
 }
 
 .sidebar-heading {
@@ -91,6 +92,7 @@ body {
     border-color: transparent;
     box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
+
 .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
@@ -141,6 +143,7 @@ body {
     white-space: nowrap;
     -webkit-overflow-scrolling: touch;
 }
+
 .avatar {
     font-size: 1rem;
     display: inline-flex;
@@ -161,4 +164,14 @@ body {
 .avatar-sm {
     font-size: .875rem;
     width: 70px;
+}
+.w-full{
+    width: 1200px;
+}
+.cartImg{
+    width: 100px;
+    height: 100px;
+}
+h3{
+    margin: 10px;
 }
