--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,5 @@
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color:whitesmoke;
     overflow: hidden;
 }
 
@@ -83,4 +82,26 @@ header{
     margin-left: 55px;
     width: 130px;
     height: 100px;
+}
+.login-form {
+    width: 340px;
+    margin: 50px auto;
+    font-size: 15px;
+}
+.login-form form {
+    margin-bottom: 15px;
+    background: #f7f7f7;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    padding: 30px;
+}
+.login-form h2 {
+    margin: 0 0 15px;
+}
+.form-control, .btn {
+    min-height: 38px;
+    border-radius: 2px;
+}
+.btn {
+    font-size: 15px;
+    font-weight: bold;
 }
