--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,109 +1,14 @@
-/* Add a black background color to the top navigation */
-.topnav {
-    overflow: hidden;
-}
-
-
-/* Style the links inside the navigation bar */
-.topnav a {
-    float:left;
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-/* Add an active class to highlight the current page */
-.topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-    display: none;
-}
-
-.products{
-    margin-top: 200px;
-    margin-left: 40px;
-    display: inline-block;
-    justify-items: center;
-}
-
-.image{
-    min-height:340px;
-    object-fit: cover;
-}
-
-h4{
-    text-align: right;
-    padding-left: 850px;
-}
-
-.buttons{
+body{
+    background: #ddd;
+    min-height: 100vh;
+    vertical-align: middle;
     display: flex;
-    margin-left: 20px;
-}
-
-.card{
-    margin-bottom: 20px;
-}
-.divider:after,
-.divider:before {
-    content: "";
-    flex: 1;
-    height: 1px;
-    background: #eee;
-}
-header{
-    /* fallback for old browsers */
-    background: #6a11cb;
-
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
-}
-
-.nav-item .nav-link i{
-    width: 25px;
-}
-.userImg{
-    margin-left: 55px;
-    width: 130px;
-    height: 100px;
-}
-.login-form {
-    width: 340px;
-    margin: 50px auto;
-    font-size: 15px;
-}
-.login-form form {
-    margin-bottom: 15px;
-    background: #f7f7f7;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    padding: 30px;
-}
-.login-form h2 {
-    margin: 0 0 15px;
-}
-.form-control, .btn {
-    min-height: 38px;
-    border-radius: 2px;
-}
-.btn {
-    font-size: 15px;
+    font-family: sans-serif;
+    font-size: 0.8rem;
     font-weight: bold;
+}
+.title{
+    margin-bottom: 5vh;
 }
 .card{
     margin: auto;
